# excalibur-tests

./: .gitignore  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  SYSTEMS.md  contributing.html  environment.yml  index.html  install.html  mkdocs.yml  pyproject.toml  reframe-settings.py  reframe_config.py  report.py  setup.html  setup.py  sitemap.xml  slurm_node_info.py  systems.html  use.html
.github/workflows/: ci.yml  docs.yml  docs_cleanup.yml  docs_preview.yml
apps/: README.md~  index.html
apps/babelstream/: index.html
apps/castep/: README.md  castep.ipynb  reframe_castep.py
apps/cp2k/: README.md  cp2k.ipynb  cp2k.py  index.html  reframe_cp2k.py  reframe_cp2k_h2o_64.py
apps/dirac/: README.md
apps/grid/: README.md  grid.py  index.html  reframe_grid.py
apps/gromacs/: Gromacs.ipynb  README.md  gromacs.ipynb  index.html  reframe_gromacs.py
apps/hpcg/: README.md  hpcg.py  index.html  reframe_hpcg.py
apps/hpgmg/: hpgmg.py  index.html  reframe_hpgmg.py
apps/hpl/: HPL.ipynb  README.md  hpl.py  index.html  reframe_hpl.py
apps/imb/: IMB.ipynb  README.md  (+3 more)
benchmarks/: reframe_config.py
contributing/: index.html
cp2k/: cp2k.ipynb  reframe_cp2k.py
demo/: run.sh  setup.sh
docs/: apps  contributing.md  index.md  install.md  post-processing  setup.md  systems.md  use.md
envs/: common.yaml
gromacs/: Gromacs.ipynb  README.md  build.sh  reframe_gromacs.py
gromacs-2016.4/: README.md  build.sh  reframe-gromacs.py  reframe_gromacs.py
helloworld/: README  helloworld-forever.c  helloworld.c  reframe_helloworld.py  runhello  runhello-forever
hpl/: README.md  reframe_hpl.py
imb/: IMB.ipynb  README.md  reframe_imb.py  run_imb.sh
imb-2018.1/: IMB.ipynb  README.md  build.sh  reframe-imb.py  reframe_imb.py  run.sh
imb-ping/: runping.py
install/: index.html
modules/: __init__.py  base_test.py  imb.py  omb.py  plots.py  reframe_extras.py  utils.py  wrf.py
omb/: OMB.ipynb  README.md  reframe_omb.py  run_osu.sh
omb-5.6.2/: OMB.ipynb  OSU.ipynb  README.md  build.sh  reframe_omb.py  run.sh
openfoam/: README.md  openfoam.ipynb  reframe_openfoam.py
post-processing/: .gitignore  HPCG_Benchmark.html  README.md  Si_Weak_Scaling.html  Si_Weak_Scaling_scaled_by_series0.html  Si_Weak_Scaling_scaled_by_series0_value128.html  config_handler.py  hpcg_config.yaml  index.html  perflog_handler.py  plot_handler.py  post_processing.py  post_processing_config.yaml  post_processing_tutorial.md  sphng_single_node.html  streamlit_post_processing.py  test_post_processing.py
reframe-hacking/: reframe-hacking.py
reframe_extras/: __init__.py
reports/: environments.ipynb  simpler_spider.ipynb  spiderplots.ipynb  testmatrix.ipynb
search/: search_index.json
setup/: cng.py  index.html  jupyter-server.sh
spack/: .gitignore  common.yaml
spack-environments/: .gitignore  common.yaml
systems/: index.html  sysinfo.json
tools/: gromacs-msgs.py  perf.py  plot.sh
tutorial/: post_processing_config.yaml  tutorial.html  tutorial.md
use/: index.html
(+2284 files in other folders)
