[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "excalibur-tests"
version = "0.0.1"
authors = [
    {name = "Mose Giordano", email = "m.giordano@ucl.ac.uk"},
    {name = "Tuomas Koskela", email = "t.koskela@ucl.ac.uk"},
    {name = "Ilektra Christidi", email = "ilektra.christidi@ucl.ac.uk"},
    {name = "Tom Young", email = "t.young@ucl.ac.uk"}
]
description = "Framework for building and running HPC benchmarks"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "benchmark",
    "hpc"
]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "reframe-hpc >= 4.6.1, < 5.0.0",
    "matplotlib >= 3.0.0",
]

[project.optional-dependencies]
test = [
  "pytest >= 6.0",
  "excalibur-tests[post-processing]",
]
post-processing = [
    "pandas >= 2.0.1",
    "bokeh == 2.4.3",
    "titlecase >= 2.4.1",
    "streamlit >= 1.30.0",
    "numpy < 2.0.0",
]

[tool.setuptools_scm]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "post-processing",
]
